TINY-12112: fix issues with dark mode in mentions (#10330)
feature/TINY-12112

--- a/modules/oxide/src/less/theme/components/mentions/mentions.less
+++ b/modules/oxide/src/less/theme/components/mentions/mentions.less
@@ -33,6 +33,7 @@
   .tox-mentions__username {
     font-size: @font-size-sm;
     line-height: @mentions-line-height;
+    color: @text-color;
   }
 
   .tox-mentions__description {
@@ -42,6 +43,7 @@
   }
 
   .tox-collection__item--active {
+    .tox-mentions__username,
     .tox-mentions__description {
       color: inherit;
     }
